--- a/src/main/java/com/annegret/officium/projectmangement/interfaces/interfaceProjectmanagement.yaml
+++ b/src/main/java/com/annegret/officium/projectmangement/interfaces/interfaceProjectmanagement.yaml
@@ -1,7 +1,8 @@
 openapi: 3.0.2
 info:
-  title: title
-  version: version
+  title: Project Manamgement of Officium
+  description: Project mangement of the light weight task management
+  version: 1.0.0
 paths:
   /projects:
     get:
