Access to database works get projects

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.hikari.maximum-pool-size=5
 
 ##PostgreSQL
 spring.data.jdbc.repositories.enabled=true
-spring.datasource.url=jdbc:postgresql://officiumdatabase.cektuoc7ofnj.eu-central-1.rds.amazonaws.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://officiumdatabase.cektuoc7ofnj.eu-central-1.rds.amazonaws.com:5432/postgres?currentSchema="projectmanagement"
 spring.datasource.username=grosserteddy
 spring.datasource.password=HexenHaus10!
 
