--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=HexenHaus10!
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+##Servers for Officium
+taskManagementServer=ec2-3-120-34-138.eu-central-1.compute.amazonaws.com:5000
